crates/wxctl/src/output/snapshots/wxctl__output__notice_snapshots_test__notice_full_plain_80.snap
---
source: crates/wxctl/src/output/notice_snapshots_test.rs
expression: "render(ColorMode::Plain)"
---

update A new release of wxctl is available: 0.1.0 → 0.2.0
  Run `wxctl update` to upgrade
[security] Security fix in 0.2.0
  Upgrade recommended.
  https://example.invalid/advisory
[news] Welcome to wxctl
  Thanks for installing.
